src/test/ui/pattern/usefulness/stable-gated-patterns.stderr
error[E0004]: non-exhaustive patterns: `Stable2` and `_` not covered
  --> $DIR/stable-gated-patterns.rs:8:11
   |
LL |     match Foo::Stable {
   |           ^^^^^^^^^^^ patterns `Stable2` and `_` not covered
   |
note: `Foo` defined here
  --> $DIR/auxiliary/unstable.rs:9:5
   |
LL | / pub enum Foo {
LL | |     #[stable(feature = "stable_test_feature", since = "1.0.0")]
LL | |     Stable,
LL | |     #[stable(feature = "stable_test_feature", since = "1.0.0")]
LL | |     Stable2,
   | |     ^^^^^^^ not covered
LL | |     #[unstable(feature = "unstable_test_feature", issue = "none")]
LL | |     Unstable,
LL | | }
   | |_-
   = note: the matched value is of type `Foo`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern, a match arm with multiple or-patterns as shown, or multiple match arms
   |
LL ~         Foo::Stable => {}
LL +         Stable2 | _ => todo!()
   |

error[E0004]: non-exhaustive patterns: `_` not covered
  --> $DIR/stable-gated-patterns.rs:13:11
   |
LL |     match Foo::Stable {
   |           ^^^^^^^^^^^ pattern `_` not covered
   |
note: `Foo` defined here
  --> $DIR/auxiliary/unstable.rs:5:1
   |
LL | / pub enum Foo {
LL | |     #[stable(feature = "stable_test_feature", since = "1.0.0")]
LL | |     Stable,
LL | |     #[stable(feature = "stable_test_feature", since = "1.0.0")]
...  |
LL | |     Unstable,
LL | | }
   | |_^
   = note: the matched value is of type `Foo`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         Foo::Stable2 => {}
LL +         _ => todo!()
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0004`.
